# aura_test

./: .gitignore  pyproject.toml  serial_comm.py
src/: chunks.py  comm.py  log.py  sensor.py  server.py  tools.py
